# forms-backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  SCHEMA.md  alembic.ini  deployment.yaml  docker-compose.yml  pyproject.toml  renovate.json  tox.ini
.github/: CODEOWNERS  contributing.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature.yml
.github/workflows/: forms-backend.yml  sentry-release.yml  status-embed.yml
backend/: __init__.py  constants.py  discord.py  logs.py  middleware.py  route.py  route_manager.py  validation.py
backend/authentication/: __init__.py  backend.py  user.py
backend/models/: __init__.py  _object_id.py  antispam.py  discord_role.py  discord_user.py  form.py  form_response.py  question.py
backend/models/dtos/: __init__.py  antispam.py  discord_role.py  form.py  form_response.py  question.py
backend/models/orm/: __init__.py  admins.py  base.py  form_questions.py  form_responses.py  forms.py
backend/models/types/: __init__.py
backend/routes/: admin.py  discord.py  index.py  roles.py
backend/routes/auth/: authorize.py
backend/routes/forms/: condorcet.py  discover.py  form.py  index.py  new.py  response.py  responses.py  submit.py  unittesting.py
migrations/: env.py  script.py.mako
migrations/versions/: 1721486482-a9ea4b71d23a_add_admins_forms.py  1721493967-787116206e6d_add_form_question_models.py  1721564095-bef2f206168e_link_form_questions_to_forms.py  1721565620-9ee599d0f323_add_form_responses.py
resources/: unittest_template.py
