[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for Python Discord Forms"
authors = ["Joe Banks <joseph@josephbanks.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
starlette = "^0.20.4"
nested_dict = "^1.61"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
motor = "3.0.0"
python-dotenv = "^0.20.0"
pyjwt = "^2.4.0"
httpx = "^0.23.0"
gunicorn = "^20.1.0"
pydantic = "^1.8.2"
spectree = "^0.10.5"
deepmerge = "^1.0.1"
sentry-sdk = "^1.11.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
flake8-annotations = "^2.9.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
