[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for Python Discord Forms"
authors = ["Joe Banks <joseph@josephbanks.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
starlette = "^0.37.2"
nested_dict = "^1.61"
uvicorn = { extras = ["standard"], version = "^0.30.1" }
motor = "3.5.0"
python-dotenv = "^1.0.1"
pyjwt = "^2.8.0"
httpx = "^0.27.0"
gunicorn = "^22.0.0"
pydantic = "^1.10.17"
spectree = "^1.2.10"
deepmerge = "^1.1.1"
sentry-sdk = "^2.7.1"

[tool.poetry.dev-dependencies]
flake8 = "^7.1.0"
flake8-annotations = "^3.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
