[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for Python Discord Forms"
authors = ["Joe Banks <joseph@josephbanks.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
starlette = "^0.37.2"
nested_dict = "^1.61"
uvicorn = { extras = ["standard"], version = "^0.30.1" }
motor = "3.5.0"
python-dotenv = "^1.0.1"
pyjwt = "^2.8.0"
httpx = "^0.27.0"
pydantic = "^1.10.17"
spectree = "^1.2.10"
deepmerge = "^1.1.1"
sentry-sdk = "^2.8.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.ruff]
target-version = "py312"
extend-exclude = [".cache", "resources"]
line-length = 100
unsafe-fixes = true
preview = true
output-format = "concise"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN002", "ANN003", "ANN101", "ANN102", "ANN204", "ANN206", "ANN401",
    "B904",
    "C401", "C408",
    "CPY001",
    "D100", "D104", "D105", "D107", "D203", "D212", "D214", "D215", "D301",
    "D400", "D401", "D402", "D404", "D405", "D406", "D407", "D408", "D409", "D410", "D411", "D412", "D413", "D414", "D416", "D417",
    "E731",
    "RET504",
    "RUF005",
    "S311", "S113", "S324",
    "SIM102", "SIM108",
    "PD",
    "PLR0913", "PLR0917", "PLR6301", "PLR1702", "PLR0915", "PLR2004",
    "PLR0912", "PLR0914", "PLR0911",
    "DTZ003",
    "INP001",
    "D102",
    "D103", "D103", "D101", "D106",
    "C901",
    "DTZ005",
    "TRY004",
    "N805",

    # Rules suggested to be ignored when using ruff format
    "COM812", "D206", "E111", "E114", "E117", "E501", "ISC001", "Q000", "Q001", "Q002", "Q003", "W191",
]

[tool.ruff.lint.isort]
order-by-type = false
case-sensitive = true
combine-as-imports = true
